@@ -189,6 +189,16 @@ class WorldpayTest < Test::Unit::TestCase
     end.respond_with(successful_authorize_response)
   end
 
+  def test_currency_exponent_handling
+    stub_comms do
+      @gateway.authorize(100, @credit_card, @options.merge(currency: :JPY))
+    end.check_request do |endpoint, data, headers|
+      assert_tag_with_attributes 'amount',
+          {'value' => '100', 'exponent' => '0', 'currencyCode' => 'JPY'},
+        data
+    end.respond_with(successful_authorize_response)
+  end
+
   def test_address_handling
     stub_comms do
       @gateway.authorize(100, @credit_card, @options.merge(billing_address: address))
